tests/error/testcaseErroCondicao.g
car c;

programa {
    c = 'a';

    se (c == 1) entao
        escreva "impossivel";
    senao
        escreva "ok";

    enquanto c
        escreva "impossivel"
}